crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/abstract_interface/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 9348] Error: Interfaces do not need the "abstract" keyword, they are abstract implicitly.
   ╭─[input.sol:7:1]
   │
 7 │ abstract interface I {}
   │ ───────────┬───────────  
   │            ╰───────────── Error occurred here.
───╯
